# ipsos

./: Cargo.toml  README.md
src/: application.rs  auth.rs  build.rs  cli.yml  config.toml.ex  imdb.rs  main.rs  mal.rs  manager.rs
