[package]
name = "ipsos"
version = "0.0.2"
authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "2.0.2"
text_io = "0.1.8"
prettytable-rs = "^0.8"